--- a/about-us.html
+++ b/about-us.html
@@ -76,29 +76,32 @@
         </p>
       </section>
       <section>
-        <h2>Nicole Benner, Registered Dietitian</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
+        <h2>Nicole Benner, Director of Nutrition Services</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/NicoleBennerpic1.jpeg" alt="Picture of Nicole Benner">
         <p>
-          Nicole is a Registered Dietitian who is passionate ​about helping her clients find peace with 
-          food in order to meet their nutrition and wellness goals. She provides medical nutrition 
-          therapy based on individual needs and incorporates intuitive eating, a non-diet approach. Her 
-          nutrition philosophy promotes "all foods fit". She encourages clients to eat real, whole food as 
-          a source of nourishment as well as a source of enjoyment and break free from the diet cycle.
-        </p><p>
-          Nicole completed her Bachelors of Science Degree in Nutrition and Dietetics from Penn State 
-          University in 1996 and subsequently completed her Dietetic Internship with Aramark in the 
-          Greater Philadelphia area in 1997.
-        </p><p>
-          Nicole has over 10 years of Nutrition Counseling experience partnering with clients in hospitals, 
-          outpatient nutrition counseling and community nutrition settings. Currently, she holds a position 
-          at Messiah College where she counsels students who struggle with eating disorders. ​
-        </p><p>
-          Nicole is committed to building a safe environment in which her clients can explore their 
-          relationship with food without judgment or criticism. In addition, she strives to stay current on 
-          research and treatment modalities through continuing education and trainings. It is her desire to 
-          continue specialization in the treatment of eating disorders. She is a member of the Academy of 
-          Nutrition and Dietetics and the International Association of Eating Disorder Professionals
-          (<a href="http://www.iaedp.com/" title="IAEDP">IAEDP</a>).​ ​
+          Nicole is a Registered Dietitian who is passionate about helping her clients find peace with food
+          and their body in order to live their fullest lives. She provides medical nutrition therapy based
+          on each person's unique needs and incorporates intuitive eating, a non-diet approach. She
+          encourages clients to make room for all foods as a source of nourishment and pleasure and break
+          free from the cycle of diets and disordered eating. 
+        </p>
+        <p>
+          Nicole's educational experience includes graduating from Penn State University in 1996 and
+          subsequently completing her internship with Aramark in the Greater Philadelphia Area in 1997. She
+          has experience partnering with clients in hospitals, outpatient centers, corporate, community as
+          well as university settings. 
+        </p>
+        <p>
+          Nicole is committed to building a safe, compassionate space and values a collaborative approach to
+          care, free of judgement or criticism. In addition, she strives to stay current on research and
+          treatment modalities through continuing education in the area of eating disorders. She is
+          credentialed by the Academy of Nutrition and Dietetics, is licensed in the state of Pennsylvania
+          and is a member of the International Association of Eating Disorder Professionals
+          (<a href="http://www.iaedp.com/" title="IAEDP">IAEDP</a>). 
+        </p>
+        <p>
+          In her free time she enjoys kayaking, hiking reading, gardening and spending time with her family,
+          friends and dog.
         </p>
       </section>
       <section>
