--- a/about-us.html
+++ b/about-us.html
@@ -76,6 +76,35 @@
         </p>
       </section>
       <section>
+        <h2>Lauren Bailey, Clinician</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
+        <img class="headshot" src="images/notfound.jpeg" alt="Picture of Lauren Bailey">
+        <p>
+          Lauren is a Registered Dietitian whose educational experience includes graduating from The
+          University of Pittsburgh in 2010 and then completing her dietetic internship through Indiana
+          State University in 2011. She obtained her Masters of Science in Nutrition through The University
+          of Rhode Island in 2020 and focused her research on the relationship of Eating Disorders within
+          the transgender population. Lauren holds a certification as a Certified Nutrition Support Clinician
+          and is credentialed through the Academy of Nutrition and Dietetics. 
+        </p>
+        <p>
+          Her career is rooted in clinical nutrition and she has enjoyed gaining clinical experience working
+          in hospitals, community settings, and in outpatient environments. She has experience engaging in
+          care with a diverse group of clients encompassing all ages. She is an ally of the LGBTQIA+
+          community and an advocate for mental health.
+        </p>
+        <p>
+          Lauren developed her passion working with individuals with Eating Disorders when she was employed
+          at a local hospital and then at an adolescent Eating Disorder clinic. Most recently, Lauren had
+          the opportunity to work with Veterans who experienced Eating Disorders. Lauren’s mission includes
+          assisting individuals with the promotion of embracing realistic and healthy relationships with food
+          and bodies. She truly values building relationships and trust with her clients.
+        </p>
+        <p>
+          In her free time she enjoys gardening, painting, crafts, cooking, movies, and spending time with
+          family and friends.
+        </p>
+      </section>      
+      <section>
         <h2>Nicole Benner, Director of Nutrition Services</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/NicoleBennerpic1.jpeg" alt="Picture of Nicole Benner">
         <p>
