404 correction on image

--- a/about-us.html
+++ b/about-us.html
@@ -77,7 +77,7 @@
       </section>
       <section>
         <h2>Lauren Bailey, Clinician</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
-        <img class="headshot" src="images/notfound.jpeg" alt="Picture of Lauren Bailey">
+        <img class="headshot" src="images/notfound.jpg" alt="Picture of Lauren Bailey">
         <p>
           Lauren is a Registered Dietitian whose educational experience includes graduating from The
           University of Pittsburgh in 2010 and then completing her dietetic internship through Indiana
