update to bio and teletherapy

--- a/about-us.html
+++ b/about-us.html
@@ -76,7 +76,7 @@
         </p>
       </section>
       <section>
-        <h2>Lauren Bailey, Clinician</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
+        <h2>Lauren Bailey, Registered Dietitian</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/notfound.jpg" alt="Picture of Lauren Bailey">
         <p>
           Lauren is a Registered Dietitian whose educational experience includes graduating from The
@@ -95,7 +95,7 @@
         <p>
           Lauren developed her passion working with individuals with Eating Disorders when she was employed
           at a local hospital and then at an adolescent Eating Disorder clinic. Most recently, Lauren had
-          the opportunity to work with Veterans who experienced Eating Disorders. Lauren’s mission includes
+          the opportunity to work with Veterans who experienced Eating Disorders. Lauren's mission includes
           assisting individuals with the promotion of embracing realistic and healthy relationships with food
           and bodies. She truly values building relationships and trust with her clients.
         </p>
