--- a/teletherapy.html
+++ b/teletherapy.html
@@ -116,6 +116,7 @@
           Clicking on one of the buttons below will redirect you to another website, and place you in the clinician's virtual waiting room.
         </p>
         <div class="wrapper">
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/LaurenBaileyRD" title="Virtual therapy link for Lauren Bailey"><img alt="doxy" src="images/doxy.png"/>Lauren Bailey</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/nicolebennerrd" title="Virtual therapy link for Nicole Benner"><img alt="doxy" src="images/doxy.png"/>Nicole Benner</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/chadbriggsncs" title="Virtual therapy link for Chad Briggs"><img alt="doxy" src="images/doxy.png"/>Chad Briggs</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/meganclinencs" title="Virtual therapy link for Megan Cline"><img alt="doxy" src="images/doxy.png"/>Megan Cline</a>
