--- a/about-us.html
+++ b/about-us.html
@@ -211,7 +211,26 @@
           Mr. Corbin has written and presented extensively on the subject of neuroscience, trauma, and
           attachment and the impact on clinical practice. He is a volunteer therapist for 
           <a href="https://www.giveanhour.org/">Give an Hour</a> and was an active member of PA Cares and
-          the Harrisburg Regional Planning Team for Operation Military Kids.​​​​ 
+          the Harrisburg Regional Planning Team for Operation Military Kids.
+        </p>
+      </section>        
+      <section>
+        <h2>Ashley Donmoyer, Clinician</h2> <h3><i>(Lenker Street Office and Virtual Office)</i></h3>
+        <img class="headshot" src="images/AshleyDonmoyerPic.jpg" alt="Picture of Ashley Donmoyer">
+        <p>
+          Ashley Donmoyer graduated from Millersville University with both a Bachelor's Degree and a Master's
+          Degree in Social Work. She obtained her license after graduating and more recently obtained a
+          certification as a Certified Grief Counseling Specialist.. 
+        </p><p>
+          Ashley has clinical experience in geriatrics where she began her career focusing on those in need
+          of long-term care, now engaging as a hospice social worker. Her extensive experience in medical
+          social work has helped her develop an understanding and sensitivity to the needs of medically
+          vulnerable populations with competency in supporting their families and loved ones.  Ashley is
+          skilled in cultural differences andstrives to offer a non-judgmental environment encouraging
+          exploration and growth. 
+        </p><p>
+          In her spare time, Ashley spends time with her family and enjoys time outdoors- deep in the forest
+          or relaxing on the beach.
         </p>
       </section>        
       <section>
