--- a/about-us.html
+++ b/about-us.html
@@ -220,7 +220,7 @@
         <p>
           Ashley Donmoyer graduated from Millersville University with both a Bachelor's Degree and a Master's
           Degree in Social Work. She obtained her license after graduating and more recently obtained a
-          certification as a Certified Grief Counseling Specialist.. 
+          certification as a Certified Grief Counseling Specialist.
         </p><p>
           Ashley has clinical experience in geriatrics where she began her career focusing on those in need
           of long-term care, now engaging as a hospice social worker. Her extensive experience in medical
