--- a/teletherapy.html
+++ b/teletherapy.html
@@ -115,6 +115,8 @@
         <p>
           Clicking on one of the buttons below will redirect you to another website, and place you in the clinician's virtual waiting room.
         </p>
+        Ashley Donmoyer
+        Kenneth Smith
         <div class="wrapper">
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/LaurenBaileyRD" title="Virtual therapy link for Lauren Bailey"><img alt="doxy" src="images/doxy.png"/>Lauren Bailey</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/nicolebennerrd" title="Virtual therapy link for Nicole Benner"><img alt="doxy" src="images/doxy.png"/>Nicole Benner</a>
@@ -122,12 +124,14 @@
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/meganclinencs" title="Virtual therapy link for Megan Cline"><img alt="doxy" src="images/doxy.png"/>Megan Cline</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeasterncounseling" title="Virtual therapy link for Megan Chicchi"><img alt="doxy" src="images/doxy.png"/>Megan Chicchi</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/jcorbinvirtualoffice" title="Virtual therapy link for James Corbin"><img alt="doxy" src="images/doxy.png"/>James Corbin</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/ashleydonmoyerncs" title="Virtual therapy link for Ashley Donmoyer"><img alt="doxy" src="images/doxy.png"/>Ashley Donmoyer</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/ncs" title="Virtual therapy link for Katie Green"><img alt="doxy" src="images/doxy.png"/>Katie Green</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/denisehaasncs" title="Virtual therapy link for Denise Haas"><img alt="doxy" src="images/doxy.png"/>Denise Haas</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/juliehillardncs" title="Virtual therapy link for Julie Hillard"><img alt="doxy" src="images/doxy.png"/>Julie Hillard</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/rachelmailey" title="Virtual therapy link for Rachel Mailey"><img alt="doxy" src="images/doxy.png"/>Rachel Mailey</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeastern" title="Virtual therapy link for Chelsea Ranney"><img alt="doxy" src="images/doxy.png"/>Chelsea Ranney</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/selenescavittoncs" title="Virtual therapy link for Selene Scavitto"><img alt="doxy" src="images/doxy.png"/>Selene Scavitto</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/kensmithncs" title="Virtual therapy link for Kenneth Smith"><img alt="doxy" src="images/doxy.png"/>Kenneth Smith</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/kirstiewardncs" title="Virtual therapy link for Kirstie Ward"><img alt="doxy" src="images/doxy.png"/>Kirstie Ward</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/paigewilliamsncs" title="Virtual therapy link for Paige Williams"><img alt="doxy" src="images/doxy.png"/>Paige Williams</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeasterncounselingservices" title="Virtual therapy link for Nicole Woods"><img alt="doxy" src="images/doxy.png"/>Nicole Woods</a>
