--- a/about-us.html
+++ b/about-us.html
@@ -226,7 +226,7 @@
           of long-term care, now engaging as a hospice social worker. Her extensive experience in medical
           social work has helped her develop an understanding and sensitivity to the needs of medically
           vulnerable populations with competency in supporting their families and loved ones.  Ashley is
-          skilled in cultural differences andstrives to offer a non-judgmental environment encouraging
+          skilled in cultural differences and strives to offer a non-judgmental environment encouraging
           exploration and growth. 
         </p><p>
           In her spare time, Ashley spends time with her family and enjoys time outdoors- deep in the forest
@@ -378,6 +378,32 @@
           a yearly Ruck March which supports efforts in the fight against suicide. The March raises
           funds for non-profit organizations that serve veterans and to raises awareness regarding the
           prevalence of veteran suicide and mental health issues. 
+        </p>
+      </section>
+      <section>
+        <h2>Ken Smith, Clinician</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
+        <img class="headshot" src="images/KenSmith.jpeg" alt="Picture of Ken Smith">
+        <p>
+          Ken is proud to be a first-generation college graduate. He has lived in central Pennsylvania
+          all his life. He was a non-traditional college student, having not started his academic journey
+          until he was almost 40 years-old. Prior to attending college he gained valuable life experience
+          in a variety of positions. He received both his Bachelor of Arts in Psychology and his Masters 
+          in Social Work from Shippensburg University. Before entering into private practice, he gained
+          experience working in the inpatient hospital where he interacted clinically with a variety of
+          populations. Ken is passionate about spreading the word of the importance of mental wellness,
+          and he works hard to dispel the stigma of receiving mental health help. Patient and client advocacy
+          is a passion of his which guides him in all he does, in both his professional and personal life.
+        </p><p>
+          Ken enjoys working with adult mental health clients from all walks of life, experiencing a number
+          of different symptoms. He utilizes an eclectic approach of treatment modalities dependent on a
+          client's needs. He has a foundation in cognitive behavioral therapy and trauma focused therapy.
+          He has a strong desire to provide treatment to active and retired military personal and their
+          families, as he would like to give back to those who have sacrificed so much for us. Personally he
+          has a deep connection with the military as all the men in his family have served.
+        </p>
+        </p><p>
+          In his free time he enjoys reading, cooking, shooting pool, watching movies, going on walks, and
+          simply relaxing with his beloved family and pets.
         </p>
       </section>
       <section>
