Adding Molly to the about us page

--- a/about-us.html
+++ b/about-us.html
@@ -103,6 +103,22 @@
           In her free time she enjoys gardening, painting, crafts, cooking, movies, and spending time with
           family and friends.
         </p>
+      </section>
+      <section>
+        <h2>🐾 Molly 🐾, Office Support</h2>
+        <img class="headshot" src="images/Molly.jpg" alt="Picture of Molly">
+        <p>
+          Molly, is a miniature schnauzer. She was recently adopted by her new mommy, Lauren the dietitian. Her first
+          mommy loved her very much and would be proud to see what she is doing today! She loves to go to work with
+          Lauren and meet new friends. She's a little shy at first, but warms up easily. If you give her pets and
+          scatches, she will love you forever! 
+        </p><p>
+          She loves to play with toys, especially her Lambchop. She also loves to walk, chase squirrels, bark, look
+          out the window, and eat treats and cookies. Sometimes when she is bored, she gets into mischief. It is a
+          good thing that she is so cute! People always compliment her on those fabulous eyebrows and beard. She is
+          very soft and the best snuggler. If you see Lauren or come into the office, you may get to meet her and she 
+          looks forwared to it. Woof!
+        </p>
       </section>      
       <section>
         <h2>Nicole Benner, Director of Nutrition Services</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
@@ -440,7 +456,7 @@
           clients where they are in their personal healing process. She is committed to helping individuals feel their
           best at any phase of life.
         </p>
-      </section> 
+      </section>     
     </div>
   </main>
   <footer class="footer bg-light">
