--- a/about-us.html
+++ b/about-us.html
@@ -117,7 +117,7 @@
           out the window, and eat treats and cookies. Sometimes when she is bored, she gets into mischief. It is a
           good thing that she is so cute! People always compliment her on those fabulous eyebrows and beard. She is
           very soft and the best snuggler. If you see Lauren or come into the office, you may get to meet her and she 
-          looks forwared to it. Woof!
+          looks forward to it. Woof!
         </p>
       </section>      
       <section>
