--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Northeastern Counseling Services specializes in the treatment of eating disorders through behavioral therapy
-   through clinicians, Nicole Woods, Megan Cline, Nicole Benner, James Corbin, Denise Haas, Selene Scavitto, Chad Briggs, Rachel Mailey and Katie Green." />
+   through clinicians, Nicole Woods, Ken Smith, Ashley Donmoyer, Megan Cline, Lauren Bailey, Nicole Benner, James Corbin, Denise Haas, Selene Scavitto, Chad Briggs, Rachel Mailey, Paige Williams, Kirstie Ward and Katie Green." />
    <meta name="theme-color" content="#3AB34A">
    <!-- Latest compiled and minified CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
