New location updates

--- a/about-us.html
+++ b/about-us.html
@@ -37,7 +37,7 @@
     <div class="container">
       <h1>About Us</h1>
       <section>
-        <h2>Nicole Woods, Director</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
+        <h2>Nicole Woods, Director</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/woods_square_2015.jpg" alt="Picture of Nicole Woods">
         <p>
           Nicole's educational background includes graduating with honors from both Towson University 
@@ -76,7 +76,7 @@
         </p>
       </section>
       <section>
-        <h2>Lauren Bailey, Registered Dietitian</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
+        <h2>Lauren Bailey, Registered Dietitian</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/LaurenBailey.jpg" alt="Picture of Lauren Bailey">
         <p>
           Lauren is a Registered Dietitian whose educational experience includes graduating from The
@@ -121,7 +121,7 @@
         </p>
       </section>      
       <section>
-        <h2>Nicole Benner, Director of Nutrition Services</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
+        <h2>Nicole Benner, Director of Nutrition Services</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/NicoleBennerpic1.jpeg" alt="Picture of Nicole Benner">
         <p>
           Nicole is a Registered Dietitian who is passionate about helping her clients find peace with food
@@ -150,7 +150,7 @@
         </p>
       </section>
       <section>
-        <h2>Chad Briggs, Clinician</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
+        <h2>Chad Briggs, Clinician</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/ChadBriggsPic.jpg" alt="Picture of Chad Briggs">
         <p>
           Chad Briggs is a first generation college graduate from a small agricultural community in the
@@ -176,7 +176,7 @@
         </p>
       </section>
       <section>
-        <h2>Megan Cline, Clinician</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
+        <h2>Megan Cline, Clinician</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/MeganCline.jpg" alt="Picture of Megan Cline">
         <p>
           Megan graduated with honors from York College of Pennsylvania, where she obtained her Bachelor's
@@ -276,7 +276,7 @@
         </p>
       </section>
       <section>
-        <h2>Denise Haas, Clinician</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
+        <h2>Denise Haas, Clinician</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/DeniseHaasPic.jpg" alt="Picture of Denise Haas">
         <p>
           Denise Haas is a Licensed Clinical Social Worker who received her Masters in Social Work from
@@ -324,7 +324,7 @@
         </p>
       </section>
       <section>
-        <h2>Rachel Mailey, Clinician</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
+        <h2>Rachel Mailey, Clinician</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/RachelMaileyPic.jpg" alt="Picture of Rachel Mailey">
         <p>
           Rachel Mailey graduated with her Master of Science (MS) in Counseling from
@@ -397,7 +397,7 @@
         </p>
       </section>
       <section>
-        <h2>Ken Smith, Clinician</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
+        <h2>Ken Smith, Clinician</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/KenSmith.jpeg" alt="Picture of Ken Smith">
         <p>
           Ken is proud to be a first-generation college graduate. He has lived in central Pennsylvania
@@ -462,7 +462,7 @@
   <footer class="footer bg-light">
     <div class="container wrap text-center">
       <p class="text-muted-custom">
-        5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
+        1001-B&nbsp;South&nbsp;Market&nbsp;St,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
         5000&nbsp;Lenker&nbsp;Street,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050
       </p>
     </div>
