--- a/contact-us.html
+++ b/contact-us.html
@@ -49,21 +49,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h2>Trindle Office Address<br>(<i>Relocating to Market St 02/27/2023</i>)</h2>
-          <p>
-            5021 East Trindle Rd
-          <br>
-            Mechanicsburg, PA 17050
-          </p><p>
-            Voice: <a href="tel:717-406-5190​" title="Voice phone">717-406-5190​</a>
-          </p><p>
-            Fax: 717-202-2590
-          </p><p>
-            <a href="mailto:info@northeasterncs.com​" title="email address">info@northeasterncs.com​</a>
-          </p>
-        </div>
-        <div class="col-md-6">
-            <iframe width="360" height="310" frameborder="0" title="Mechanicsburg office location map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d761.811859535534!2d40.225540!3d-76.972755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c8e872cadc1dd1%3A0xa0fc26500b7c31b0!2s5021%20S%20Trindle%20Rd%2C%20Mechanicsburg%2C%20PA%2017050!5e0!3m2!1sen!2sus!4v1676131131765!5m2!1sen!2sus" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <h2>Trindle Office Address<br>(<i style="color:red">Closed - Relocated to Market St 02/27/2023</i>)</h2>
         </div>
       </div>
       <div class="row">
@@ -112,7 +98,7 @@
   <footer class="footer bg-light">
     <div class="container wrap text-center">
       <p class="text-muted-custom">
-        5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
+        1001-B&nbsp;South&nbsp;Market&nbsp;St,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
         5000&nbsp;Lenker&nbsp;Street,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050
       </p>
     </div>
