--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <footer class="footer bg-light">
     <div class="container wrap text-center">
       <p class="text-muted-custom">
-        5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
+        1001-B&nbsp;South&nbsp;Market&nbsp;St,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
         5000&nbsp;Lenker&nbsp;Street,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050
       </p>
     </div>
