--- a/about-us.html
+++ b/about-us.html
@@ -176,6 +176,22 @@
         </p>
       </section>
       <section>
+        <h2>Shannon Canu, Clinician</h2> <h3><i>(Virtual Office)</i></h3>
+        <img class="headshot" src="images/ShannonCanu.jpg" alt="Picture of Shannon Canu">
+        <p>
+          Many people feel alone and unheard, especially those who are dealing with the effects of
+          trauma. Through a person-centered approach, Shannon uses experiential techniques and
+          traditional talk therapies to provide a unique, customized approach for children and adults. She is
+          experienced in working with clients struggling with anxiety, depression, self-harm, grief, divorce,
+          and trauma. She believes strongly in meeting her clients where they are in life, facilitating
+          change and growth, and supporting them as they begin the work toward new perspectives.
+          Listening without judgment, Shannon guides her clients as they find their new path forward.
+          With a Bachelor of Science in Psychology and a Master of Science in Mental Health
+          Counseling, Shannon is also a Registered Play Therapist with extensive experience working with
+          both children and adults. In her free time, she enjoys spending time with her many wonderful pets.                    
+        </p>
+      </section>
+      <section>
         <h2>Megan Cline, Clinician</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/MeganCline.jpg" alt="Picture of Megan Cline">
         <p>
@@ -376,24 +392,6 @@
         </p><p>      
           Chelsea spends her free time with her new husband and their furry friend Frankie: hiking, walking
           and being outdoors. She also enjoys theatre, hockey and interior design.     
-        </p>
-      </section>
-      <section>
-        <h2>Selene Scavitto, Clinician</h2> <h3><i>(Virtual Office)</i></h3>
-        <img class="headshot" src="images/SeleneScavitto.jpg" alt="Picture of Selene Scavito">
-        <p>
-          Selene graduated from Shippensburg University with her MSW and currently is a LSW. Selene has
-          experience working in a variety of settings including as Director of Social Services at a
-          Continuing Care Retirement Community, hospital setting, and outpatient private practice. She
-          enjoys working with adolescents and adults, helping them find their way through life's
-          challenges, by teaching new ways to cope and setting realistic goals. She strives to offer a
-          non-judgmental, culturally sensitive environment conducive to exploration and growth.
-        </p><p>
-          In her spare time, Selene enjoys spending time with her family and is active in raising
-          awareness of the mental health needs of military members and veterans. Selene coordinates
-          a yearly Ruck March which supports efforts in the fight against suicide. The March raises
-          funds for non-profit organizations that serve veterans and to raises awareness regarding the
-          prevalence of veteran suicide and mental health issues. 
         </p>
       </section>
       <section>
