--- a/contact-us.html
+++ b/contact-us.html
@@ -62,11 +62,11 @@
           <br>
             Mechanicsburg, PA 17055
           </p><p>
-            Voice: <a href="tel:717-406-5190​" title="Voice phone">717-406-5190​</a>
+            Voice: <a href="tel:717-406-5190" title="Voice phone">717-406-5190</a>
           </p><p>
             Fax: 717-202-2590
           </p><p>
-            <a href="mailto:info@northeasterncs.com​" title="email address">info@northeasterncs.com​</a>
+            <a href="mailto:info@northeasterncs.com" title="email address">info@northeasterncs.com</a>
           </p>
         </div>
         <div class="col-md-6">
