--- a/about-us.html
+++ b/about-us.html
@@ -340,6 +340,38 @@
         </p>
       </section>
       <section>
+        <h2>Vilma Lopez, Clinician</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
+        <img class="headshot" src="images/VilmaLopez.jpg" alt="Picture of Vilma Lopez">
+        <p>
+          Vilma Lopez is a Licensed Social Worker who graduated from Millersville University with a Bachelor's
+          degree in Psychology and Master's Degree in Social Work. Vilma has worked in the field since 2015 and
+          has experience working with adolescents, young adults, and adults in school settings, youth programs,
+          and higher education. She has experience working with clients that experience anxiety, depression,
+          suicidal ideation, grief and loss, life-adjustments, and emotional disturbances. Vilma's clinical
+          approach includes a focus on the utilization of Cognitive Behavioral Therapy and Strength-Based
+          practices in her treatment relationships. 
+        </p>
+        <p>
+          Vilma became passionate about working with the adolescent population during her many volunteer
+          experiences in other countries. Some of her volunteer experiences include working overseas in South
+          Africa where she worked with women and children in domestic violence situations. She also volunteered
+          in Bolivia, South America, where she gained experience providing group therapy at an orphanage.
+        </p>
+        <p>
+          Vilma is a current member of the Pennsylvania Society for Clinical Social Work (PSCSW). She regularly
+          receives training and participates in Continuing Education Courses. She is committed to treating each
+          person respectfully and prioritizing their dignity and worth. Vilma emphasizes the importance of
+          confidentiality and is committed to providing a safe environment for her clients to express themselves
+          in a judgment free space. She strives to help clients realize their capacity for growth and assists them
+          in seeing their ability to make empowering changes in their lives.
+        </p>
+        <p>
+          Some fun facts about Vilma are that she enjoys traveling abroad and exploring different cultures. She
+          loves hiking and spending time reading in nature. She loves being adventurous with friends and family
+          and enjoys mentoring the youth and young adults. 
+        </p>
+      </section>
+      <section>
         <h2>Rachel Mailey, Clinician</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/RachelMaileyPic.jpg" alt="Picture of Rachel Mailey">
         <p>
