new employee and tele info

--- a/about-us.html
+++ b/about-us.html
@@ -176,6 +176,29 @@
         </p>
       </section>
       <section>
+        <h2>Karleena Calimer, Clinician</h2> <h3><i>(Virtual Office)</i></h3>
+        <img class="headshot" src="images/KarleenaCalimer.jpg" alt="Picture of Karleena Calimer">
+        <p>
+          Karleena is a Licensed Social Worker who graduated from Shippensburg University with a Bachelors
+          Degree and Masters Degree in Social Work.
+        </p><p>
+          Karlena advocates for self-determination and strongly believes in meeting individuals where they
+          are at in their healing journey. She strives to promote an environment that is comfortable for all
+          individuals by fully integrating a person's physical, mental, and spiritual well-being into her
+          practice. Her love for relationships brings her desire to understand emotional processes and
+          healing. She firmly values rapport and trust in the therapeutic relationship. She understands how
+          difficult it can be to seek therapy services and is ready to meet you where you are at.  
+        </p><p>
+          Karleena has experience working with individuals that are struggling with grief, loss, anxiety,
+          depression, and family concerns. In addition, has experience serving those with terminal conditions
+          and complex medical issues. She demonstrates a commitment to professional development by regularly
+          attending Continuing Education and local conferences that expand her knowledge across all age
+          groups. She is an advocate for wellness and hopes to empower others throughout all phases of life.  
+          Karleena enjoys spending time with her family and raising her children. She enjoys traveling to new
+          areas, listening to music, and being outdoors.
+        </p>
+      </section>
+      <section>
         <h2>Shannon Canu, Clinician</h2> <h3><i>(Virtual Office)</i></h3>
         <img class="headshot" src="images/ShannonCanu.jpg" alt="Picture of Shannon Canu">
         <p>
