--- a/teletherapy.html
+++ b/teletherapy.html
@@ -121,6 +121,7 @@
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/LaurenBaileyRD" title="Virtual therapy link for Lauren Bailey"><img alt="doxy" src="images/doxy.png"/>Lauren Bailey</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/nicolebennerrd" title="Virtual therapy link for Nicole Benner"><img alt="doxy" src="images/doxy.png"/>Nicole Benner</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/chadbriggsncs" title="Virtual therapy link for Chad Briggs"><img alt="doxy" src="images/doxy.png"/>Chad Briggs</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/karleenacalimerNCS" title="Virtual therapy link for Karleena Calimer"><img alt="doxy" src="images/doxy.png"/>Karleena Calimer</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/ShannonCanuNCS" title="Virtual therapy link for Shannon Canu"><img alt="doxy" src="images/doxy.png"/>Shannon Canu</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/meganclinencs" title="Virtual therapy link for Megan Cline"><img alt="doxy" src="images/doxy.png"/>Megan Cline</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeasterncounseling" title="Virtual therapy link for Megan Chicchi"><img alt="doxy" src="images/doxy.png"/>Megan Chicchi</a>
@@ -130,6 +131,7 @@
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/denisehaasncs" title="Virtual therapy link for Denise Haas"><img alt="doxy" src="images/doxy.png"/>Denise Haas</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/juliehillardncs" title="Virtual therapy link for Julie Hillard"><img alt="doxy" src="images/doxy.png"/>Julie Hillard</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/rachelmailey" title="Virtual therapy link for Rachel Mailey"><img alt="doxy" src="images/doxy.png"/>Rachel Mailey</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/vilmalopezncs" title="Virtual therapy link for Vilma Lopez"><img alt="doxy" src="images/doxy.png"/>Vilma Lopez</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeastern" title="Virtual therapy link for Chelsea Ranney"><img alt="doxy" src="images/doxy.png"/>Chelsea Ranney</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/kensmithncs" title="Virtual therapy link for Kenneth Smith"><img alt="doxy" src="images/doxy.png"/>Kenneth Smith</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/kirstiewardncs" title="Virtual therapy link for Kirstie Ward"><img alt="doxy" src="images/doxy.png"/>Kirstie Ward</a>
