expand employee location availability

--- a/about-us.html
+++ b/about-us.html
@@ -199,7 +199,7 @@
         </p>
       </section>
       <section>
-        <h2>Shannon Canu, Clinician</h2> <h3><i>(Virtual Office)</i></h3>
+        <h2>Shannon Canu, Clinician</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/ShannonCanu.jpg" alt="Picture of Shannon Canu">
         <p>
           Many people feel alone and unheard, especially those who are dealing with the effects of
